--- a/src/chess.scss
+++ b/src/chess.scss
@@ -6,4 +6,18 @@
 
 .space {
     border: 1px solid black;
+
+    &.dark {
+        background-color: lightsteelblue;
+    }
+}
+
+.piece {
+    height: 100%;
+    width: 100%;
+
+    img {
+        max-height: 100%;
+        max-width: 100%;
+    }
 }
